music: build: move source dir to rootdir/src in pom.xml

--- a/Music/pom.xml
+++ b/Music/pom.xml
@@ -19,6 +19,15 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>${basedir}/src</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>${basedir}/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
