music: build: add assets dir in the jar file generated by maven

--- a/Music/pom.xml
+++ b/Music/pom.xml
@@ -27,6 +27,9 @@
                     <exclude>**/*.java</exclude>
                 </excludes>
             </resource>
+            <resource>
+                <directory>${basedir}/assets</directory>
+            </resource>
         </resources>
 
         <plugins>
