repo: lfs: add soundfonts to git-lfs stored files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.mid filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.sf2 filter=lfs diff=lfs merge=lfs -text
+*.SF2 filter=lfs diff=lfs merge=lfs -text
