--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ jdk:
     - oraclejdk8
 
 before_install:
-    - mkdir -p $HOME/bin
-    - wget https://github.com/github/git-lfs/releases/download/v1.2.1/git-lfs-linux-amd64-1.2.1.tar.gz
-    - tar xvzf git-lfs-linux-amd64-1.2.1.tar.gz
-    - mv git-lfs-1.2.1/git-lfs $HOME/bin/git-lfs
-    - export PATH=$PATH:$HOME/bin
+    #- mkdir -p $HOME/bin
+    #- wget https://github.com/github/git-lfs/releases/download/v1.2.1/git-lfs-linux-amd64-1.2.1.tar.gz
+    #- tar xvzf git-lfs-linux-amd64-1.2.1.tar.gz
+    #- mv git-lfs-1.2.1/git-lfs $HOME/bin/git-lfs
+    #- export PATH=$PATH:$HOME/bin
     - sudo apt-get update
     - sudo apt-get install oracle-java8-installer
 
 script:
-    - git lfs pull
+    #- git lfs pull
     - mvn clean test
