--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,8 @@
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.sf2 filter=lfs diff=lfs merge=lfs -text
 *.SF2 filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs -text
+*.svg filter=lfs diff=lfs merge=lfs -text
+*.otf filter=lfs diff=lfs merge=lfs -text
+*.woff filter=lfs diff=lfs merge=lfs -text
+*.woff2 filter=lfs diff=lfs merge=lfs -text
