--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.21</version>
         </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-template-velocity</artifactId>
+            <version>2.3</version>
+        </dependency>
 
     </dependencies>
 
@@ -143,7 +148,7 @@
                             <id>app</id>
                         </program>
                         <program>
-                            <mainClass>web.Main</mainClass>
+                            <mainClass>website.java.app.Main</mainClass>
                             <id>webserv</id>
                         </program>
                     </programs>
