lstm: change some lstm values

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>deeplearning4j-core</artifactId>
             <version>0.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-ui</artifactId>
+            <version>0.6.0</version>
+        </dependency>
         <!-- THIS IS FOR CPU-->
         <dependency>
             <groupId>org.nd4j</groupId>
