--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <version>${nd4j.version}</version>
         </dependency>
         -->
+        <dependency>
+            <groupId>de.sciss</groupId>
+            <artifactId>abc4j</artifactId>
+            <version>0.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
