lstm: visualization: add web monitoring to lstm trainer

--- a/pom.xml
+++ b/pom.xml
@@ -53,18 +53,18 @@
         <dependency>
             <groupId>org.deeplearning4j</groupId>
             <artifactId>deeplearning4j-core</artifactId>
-            <version>0.6.0</version>
+            <version>0.7.1</version>
         </dependency>
         <dependency>
             <groupId>org.deeplearning4j</groupId>
-            <artifactId>deeplearning4j-ui</artifactId>
-            <version>0.6.0</version>
+            <artifactId>deeplearning4j-ui_2.11</artifactId>
+            <version>0.7.1</version>
         </dependency>
         <!-- THIS IS FOR CPU-->
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-native-platform</artifactId>
-            <version>0.6.0</version>
+            <version>0.7.1</version>
         </dependency>
         <!-- THIS IS FOR CUDA -->
         <!--
