--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,7 @@
                 <artifactId>appassembler-maven-plugin</artifactId>
                 <version>1.10</version>
                 <configuration>
+                    <extraJvmArguments>-Dorg.deeplearning4j.ui.port=9001</extraJvmArguments>
                     <programs>
                         <program>
                             <mainClass>main.Main</mainClass>
